prevent white gap of margin overlapping section end

--- a/src/components/ArticleContent/ArticleContent.module.scss
+++ b/src/components/ArticleContent/ArticleContent.module.scss
@@ -1,5 +1,7 @@
 .ArticleContent {
   padding: 0 var(--primary-margin);
+  /* prevents ending section before last margin */
+  display: flow-root;
 
   .RichContent {
     @media (min-width: 700px) {
@@ -9,7 +11,7 @@
     p, ul {
       margin-bottom: calc(12px + var(--vertical-margin-base));
     }
-    
+
     h2, h3, h4 {
       margin-bottom: calc(8px + var(--vertical-margin-base));
     }
